WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
275228
[WebGPU] Destroyed Device leads to validation errors in render pipeline
https://bugs.webkit.org/show_bug.cgi?id=275228
Summary
[WebGPU] Destroyed Device leads to validation errors in render pipeline
Mike Wyrzykowski
Reported
2024-06-06 15:05:59 PDT
[WebGPU] Destroyed Device leads to validation errors in render pipeline
Attachments
Add attachment
proposed patch, testcase, etc.
Mike Wyrzykowski
Comment 1
2024-06-06 15:08:34 PDT
radar://129354702
Mike Wyrzykowski
Comment 2
2024-06-06 15:28:32 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/29597
EWS
Comment 3
2024-06-07 09:27:40 PDT
Committed
279815@main
(1e28db88d215): <
https://commits.webkit.org/279815@main
> Reviewed commits have been landed. Closing PR #29597 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug