[WebGPU] Destroyed Device leads to validation errors in render pipeline https://bugs.webkit.org/show_bug.cgi?id=275228 <radar://129354702>

Reviewed by Dan Glastonbury.

We need to return early if the Device is destroyed, since setting a nil
PSO will fail the validation layer.

* Source/WebGPU/WebGPU/RenderPassEncoder.mm:
(WebGPU::RenderPassEncoder::clampIndexBufferToValidValues):
(WebGPU::RenderPassEncoder::clampIndirectIndexBufferToValidValues):
(WebGPU::RenderPassEncoder::clampIndirectBufferToValidValues):
(WebGPU::RenderPassEncoder::executeBundles):

Canonical link: https://commits.webkit.org/279815@main